
syntax = "proto3";

option go_package = "./chat";


package proto;

service UserService {
  rpc CreateUser (User) returns (User) {}
  rpc CreateManyUsers (UserList) returns (UserList) {}
  rpc ReadUser (UserId) returns (User) {}
  rpc UpdateUser (UpdateUserMessage) returns (User) {}
  rpc DeleteUser (UserId) returns (User) {}
}

message UserList {
  repeated User users = 1;
}

message User {
  string name = 1;
  string email = 2;
  reserved 3 to 5;
}

message UserId {
  int32 id = 1;  
}

message UpdateUserMessage{
  int32 id = 1;
  string name = 2;
  string email = 3;
}



